--- a/.env.example
+++ b/.env.example
@@ -4,4 +4,11 @@ DATABASE_PORT=3306
 DATABASE_PASSWORD=''
 DATABASE_NAME=
 
+# STAGGING
+# DATABASE_HOST=us-cdbr-east-05.cleardb.net
+# DATABASE_USER=b977b9718c28b6
+# DATABASE_PORT=3306
+# DATABASE_PASSWORD=ef5de04b
+# DATABASE_NAME=heroku_c79aafae18b916d
+
 SALT_ROUND=
